@@ -2,6 +2,8 @@ Revision history for OpenSky-API
 
 {{$NEXT}}
 
+          - Trim down our WebService::OpenSky::Moose module
+
 0.3       2023-06-06 08:05:17 CEST
           - Convert to MooseX::Extended
 
